<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2 Min</string>
    <string name="error">Choisir une durée et un contact !</string>
    <string formatted="false" name="message">Attention !!! \nJ\'arrive dans %1$d minutes ! \nEnvoyé avec l\'app 2 Min!</string>
    <string formatted="false" name="arrive">Vous avez mis %d secondes \npour accomplir votre tâche !</string>
    <string formatted="false" name="arrive2">Vous avez mis %d min %d secondes \npour accomplir votre tâche !</string>
    <string name="action_settings">Paramètres</string>
    <string name="btn_arrive">Je suis arrivé !</string>
    <string name="redo">Refaire</string>
    <string name="quit">Quitter</string>
    <string name="thanks">Merci ! :)</string>
    <string name="duration">Durée (en minutes)</string>
    <string name="send">Envoyer</string>
    <string name="send_in_progress">Envoi en cours...</string>
    <string name="sent">Fait !</string>
    <string name="settings_message">Message affiché :</string>
    <string name="settings_credits">Merci à vous d\'avoir pris le temps d\'essayer ma première application sur le store ! \nN\'hésitez pas à la noter et à me faire des commentaires sur d\'éventuelles améliorations. ! :)</string>
    <string name="send_with">\nEnvoyé avec l\'app 2 Min!</string>
    <string name="message_base">Attention !!! \nJ\'arrive dans</string>
    <string name="settings_result">Résultat :</string>
    <string name="no_contacts">Vous devez spécifier des contacts favoris dans votre application de contact !</string>
    <string name="arrived_btn_text">SMS en cours!</string>
    <string name="arrive_sms_tosend">Je suis là !</string>
    <string name="arrive_btn_text_send">Envoyer SMS</string>
    <string name="arrive_sms_completed">SMS envoyé!</string>

</resources>
