<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_blue_grey_950"
    tools:context=".Settings">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

    <TextView android:text="@string/settings_message" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textSize="30dp"
        android:textColor="@color/dim_foreground_material_dark"
        android:layout_gravity="right" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dim_foreground_material_dark"/>

        <EditText
            android:id="@+id/edit_input_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="22dp"
            android:textColor="@color/dim_foreground_material_dark"
            android:lines="3"/>

        <TextView
            android:id="@+id/tv_input_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="[MINUTES]"
            android:layout_margin="20dp"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/dim_foreground_material_dark"/>

        <EditText
            android:id="@+id/edit_input_text2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:textColor="@color/dim_foreground_material_dark"
            android:lines="3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_result"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="30dp"
            android:textColor="@color/dim_foreground_material_dark"
            android:layout_gravity="right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dim_foreground_material_dark"/>

        <TextView
            android:id="@+id/tvCredits"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/dim_foreground_material_dark"
            android:text="@string/settings_credits"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton android:id="@+id/fabBack"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:onClick="backButton"
        app:backgroundTint="@color/blue_normal"
        android:src="@android:drawable/ic_menu_revert" />

</RelativeLayout>
