<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/material_blue_grey_950"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView android:text="Contact :" android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/dim_foreground_material_dark"
            android:layout_gravity="right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dim_foreground_material_dark"/>

        <ListView
            android:id="@+id/lv_contacts"
            android:layout_width="wrap_content"
            android:layout_height="215dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/dim_foreground_material_dark"/>

        <TextView android:text="@string/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_marginTop="30dp"
            android:textColor="@color/dim_foreground_material_dark"
            android:textStyle="bold"
            android:layout_gravity="right" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/dim_foreground_material_dark"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:weightSum="4"
            android:orientation="horizontal">

        <com.dd.processbutton.FlatButton
            android:id="@+id/btn_2"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_light"
            custom:pb_colorPressed="@android:color/holo_blue_dark"/>
        <com.dd.processbutton.FlatButton
            android:id="@+id/btn_5"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="5"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_light"
            custom:pb_colorPressed="@android:color/holo_blue_dark"/>
        <com.dd.processbutton.FlatButton
            android:id="@+id/btn_10"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_light"
            custom:pb_colorPressed="@android:color/holo_blue_dark"/>
        <com.dd.processbutton.FlatButton
            android:id="@+id/btn_15"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="15"
            android:textColor="@android:color/white"
            custom:pb_colorNormal="@android:color/holo_blue_light"
            custom:pb_colorPressed="@android:color/holo_blue_dark"/>
        </LinearLayout>

        <com.dd.processbutton.iml.SubmitProcessButton
            android:id="@+id/btn_valider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="16dp"
            android:text="@string/send"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            custom:pb_colorComplete="@color/green_complete"
            custom:pb_colorNormal="@color/blue_normal"
            custom:pb_colorPressed="@color/blue_pressed"
            custom:pb_colorProgress="@color/purple_progress"
            custom:pb_textComplete="@string/sent"
            custom:pb_textProgress="@string/send_in_progress"
            custom:pb_textError="Erreur"
            custom:pb_colorError="@color/red_error" />

        <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="settingClicked"
            app:backgroundTint="@color/blue_normal"
            android:src="@android:drawable/ic_menu_manage" />

    </LinearLayout>

</RelativeLayout>
